--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,6 +23,8 @@
 @import './referrals';
 @import './pump-vision';
 @import './token-explorer';
+@import './custom-dropdown';
+@import './wallet-manager';
 @import './tabs';
 @import './footer';
 
