--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,8 @@
 @import './token-explorer';
 @import './custom-dropdown';
 @import './wallet-manager';
+@import './settings';
+@import './twofactor';
 @import './tabs';
 @import './footer';
 
