--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,6 +27,7 @@
 @import './wallet-manager';
 @import './settings';
 @import './twofactor';
+@import './terminal';
 @import './tabs';
 @import './footer';
 
