--- a/src/scss/_tabs.scss
+++ b/src/scss/_tabs.scss
@@ -400,6 +400,10 @@
     &.active {
       background-color: var(--green-2);
       color: var(--text-1);
+
+      &.subtabs__btn--red {
+        background-color: var(--red);
+      }
     }
   }
 
