--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,6 +28,7 @@
 @import './settings';
 @import './twofactor';
 @import './terminal';
+@import './slider';
 @import './tabs';
 @import './footer';
 
