--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -7,7 +7,13 @@
     flex-grow: 1;
     padding: 0 10px 80px;
   }
+
+  .main--not-padding {
+    padding: 0;
+  }
 }
+
+
 
 .bg {
   background-image: image-set(url("../img/start/bg.webp") 1x type("image/webp"), url("../img/start/bg.png") 1x, url("../img/start/bg@2x.webp") 2x type("image/webp"), url("../img/start/bg@2x.png") 2x);
@@ -51,6 +57,17 @@
 
   &--red {
     background-color: var(--red);
+  }
+
+  &--red-outline {
+    padding: 4px 10px;
+    border-radius: 4px;
+    width: 140px;
+    min-height: 32px;
+    border: 1px solid var(--red);
+    background-color: transparent;
+    font-weight: 600;
+    font-size: 10px;
   }
 }
 
