--- a/src/scss/_inputs.scss
+++ b/src/scss/_inputs.scss
@@ -223,7 +223,7 @@
   &__input {
     width: 100%;
     height: 40px;
-    padding: 12px 40px;
+    padding: 12px 20px;
     background-color: #272728;
     border-radius: 8px;
     border: 1px solid transparent;
@@ -234,6 +234,15 @@
     font-weight: 400;
     font-size: 14px;
     color: var(--text-1);
+
+    &:has(~img) {
+      padding: 12px 40px;
+    }
+
+    &:has(~img.input__item-decor--right) {
+      padding: 12px 20px;
+    }
+
 
     &::placeholder {
       font-family: var(--font-family);
