--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -18,12 +18,24 @@
   background-color: rgb(22, 22, 23, 0.9);
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
+
+  .table td {
+    padding: 6px 10px;
+  }
+
+  .table td:first-child {
+    padding-left: 0;
+  }
+
+  .table td:last-child {
+    padding-right: 0;
+  }
 }
 
 .modal.show {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   opacity: 1;
 }
 
@@ -40,6 +52,17 @@
   opacity: 0;
   transform: translateY(-50px);
   transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+
+  &--fit-content {
+
+    .modal__inner {
+      min-height: fit-content;
+    }
+
+    .modal__footer {
+      margin-top: 40px;
+    }
+  }
 }
 
 .modal.show .modal-content {
