--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -6,7 +6,7 @@
   bottom: 0;
   display: flex;
   flex-direction: column;
-  row-gap: 36px;
+  row-gap: 18px;
   padding: 60px 10px 40px;
   z-index: 100;
   background-color: #161617;
@@ -111,7 +111,7 @@
     justify-content: space-between;
     column-gap: 10px;
     padding: 0 30px;
-    margin-top: 30px;
+    margin-top: auto;
     background-color: #272728;
     background-image: url('../img/reck/bg.png');
     background-repeat: no-repeat;
