--- a/src/scss/_tabs.scss
+++ b/src/scss/_tabs.scss
@@ -450,6 +450,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
   }
 
   // .sessions__item-info
