--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -5,27 +5,19 @@
   margin: 0 auto;
   padding: 0 $containerSidePadding + px;
 
-  @media (max-width: $breakpoint1450) {
-    max-width: 1200px;
-  }
+  @media (max-width: $breakpoint1450) {}
 
-  @media (max-width: $breakpoint992) {
-    max-width: 970px;
-  }
+  @media (min-width: $breakpoint992) {}
 
-  @media (max-width: $breakpoint768) {
-    max-width: 740px;
-  }
+  @media (max-width: $breakpoint768) {}
 
-  @media (max-width: $breakpoint480) {
-    max-width: none;
-  }
+  @media (max-width: $breakpoint480) {}
 }
 
 html {
   scroll-behavior: smooth;
   background-color: var(--black-10);
-  scrollbar-gutter: stable;
+  // scrollbar-gutter: stable;
 }
 
 // Body Locked
