--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,11 +1,20 @@
+.desktop-wrapper {
+  display: flex;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
   min-height: 100dvh;
+  width: 100%;
 
   main {
     flex-grow: 1;
     padding: 0 10px 80px;
+
+    @media (min-width: $breakpoint992) {
+      padding: 0 0 20px;
+    }
   }
 
   .main--not-padding {
@@ -20,6 +29,11 @@
   background-image: -webkit-image-set(url("../img/start/bg.webp") 1x type("image/webp"), url("../img/start/bg.png") 1x, url("../img/start/bg@2x.webp") 2x type("image/webp"), url("../img/start/bg@2x.png") 2x);
   background-repeat: no-repeat;
   background-size: cover;
+
+  @media (min-width: $breakpoint992) {
+    background-image: image-set(url("../img/start/bg-desktop.webp") 1x type("image/webp"), url("../img/start/bg-desktop.png") 1x, url("../img/start/bg-desktop@2x.webp") 2x type("image/webp"), url("../img/start/bg-desktop@2x.png") 2x);
+    background-image: -webkit-image-set(url("../img/start/bg-desktop.webp") 1x type("image/webp"), url("../img/start/bg-desktop.png") 1x, url("../img/start/bg-desktop@2x.webp") 2x type("image/webp"), url("../img/start/bg-desktop@2x.png") 2x);
+  }
 }
 
 .btn {
@@ -32,11 +46,12 @@
   min-height: 48px;
   height: fit-content;
   padding: 10px;
+  border: 1px solid transparent;
   background-color: var(--green-2);
-  border: 0;
   outline: 0;
   border-radius: 8px;
   cursor: pointer;
+  transition: 0.2s linear;
 
   font-family: var(--font-family);
   font-weight: 700;
@@ -68,6 +83,20 @@
     background-color: transparent;
     font-weight: 600;
     font-size: 10px;
+  }
+
+
+  @media (hover:hover) {
+    &:hover {
+      border-color: var(--green-2);
+      background-color: transparent;
+    }
+  }
+
+  &:active,
+  &:focus {
+    border-color: var(--green-2);
+    background-color: transparent;
   }
 }
 
@@ -125,6 +154,7 @@
   text-transform: uppercase;
   text-align: center;
   color: var(--text-1);
+  transition: 0.2s linear;
 
   &--mini {
     font-size: 12px;
@@ -145,6 +175,19 @@
 
   &--fit-width {
     width: fit-content;
+  }
+
+  @media (hover:hover) {
+    &:hover {
+      border-color: var(--green-2);
+      background-color: var(--green-2);
+    }
+  }
+
+  &:active,
+  &:focus {
+    border-color: var(--green-2);
+    background-color: var(--green-2);
   }
 }
 
