--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -14,6 +14,10 @@
     padding: 14px 16px 20px;
   }
 
+  @media (min-width: $breakpoint992) {
+    display: none;
+  }
+
   // .footer__inner
 
   &__inner {}
