--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -18,6 +18,12 @@
   background-color: rgb(22, 22, 23, 0.9);
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
+  animation: fade 0.3s linear;
+
+  @media (min-width: $breakpoint992) {
+    background-color: rgb(22, 22, 23, 0.8);
+    backdrop-filter: blur(10px);
+  }
 
   .table td {
     padding: 6px 10px;
@@ -39,6 +45,29 @@
   opacity: 1;
 }
 
+.aside-modal.modal {
+  justify-content: flex-end;
+  padding: 0;
+
+  @media (min-width: $breakpoint992) {
+    background: rgba(4, 4, 4, 0.6);
+    backdrop-filter: blur(0);
+  }
+
+
+  form {
+    background-color: #161617;
+    max-width: 100%;
+    width: 100%;
+    padding: 24px 20px;
+
+    @media (min-width: $breakpoint992) {
+      max-width: 394px;
+      min-width: 394px;
+    }
+  }
+}
+
 .modal-content {
   position: relative;
   background-color: #101010;
@@ -48,7 +77,7 @@
   border-radius: 8px;
   width: calc(100% - 16px);
 
-  max-width: 600px;
+  max-width: 760px;
   opacity: 0;
   transform: translateY(-50px);
   transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
@@ -63,6 +92,11 @@
       margin-top: 40px;
     }
   }
+
+  @media (min-width: $breakpoint992) {
+    padding: 24px 20px;
+  }
+
 }
 
 .modal.show .modal-content {
@@ -94,7 +128,9 @@
 
 
 
-
+.filters-page__form {
+  background-color: #161617;
+}
 
 .open-modal-btn {}
 
@@ -107,6 +143,10 @@
     flex-direction: column;
     min-height: 620px;
     height: fit-content;
+
+    @media (min-width: $breakpoint992) {
+      min-height: 400px;
+    }
   }
 
   // .modal__head
@@ -122,6 +162,10 @@
     font-size: 16px;
     text-align: left;
     color: var(--text-1);
+
+    @media (min-width: $breakpoint992) {
+      font-size: 20px;
+    }
   }
 
   // .modal__title--center
@@ -137,6 +181,11 @@
     font-size: 13px;
     text-align: left;
     color: var(--text2);
+
+    @media (min-width: $breakpoint992) {
+      margin-top: 12px;
+      font-size: 15px;
+    }
   }
 
   // .modal__text--center
@@ -157,6 +206,12 @@
     display: flex;
     flex-direction: column;
     row-gap: 10px;
+
+    @media (min-width: $breakpoint992) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 10px;
+    }
   }
 
   // .modal__token
@@ -170,12 +225,19 @@
     border: 1px solid transparent;
     border-radius: 8px;
     transition: border 0.2s linear;
+    cursor: pointer;
 
     &.active {
       border: 1px solid var(--green-2);
 
       .modal__token-checked {
         visibility: visible;
+      }
+    }
+
+    @media (hover:hover) {
+      &:hover {
+        border: 1px solid var(--green-2);
       }
     }
   }
