--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -42,14 +42,7 @@
       .nav__link {
 
         &::before {
-          content: '';
-          position: absolute;
-          right: -10px;
-          top: 0;
-          left: 0;
-          bottom: 0;
-          background: linear-gradient(90deg, #161617 22%, rgba(17, 69, 61, 0.71) 59.5%, rgba(8, 153, 129, 0.2) 100%);
-          z-index: -1;
+          opacity: 1;
         }
 
       }
@@ -65,6 +58,19 @@
     display: flex;
     align-items: center;
     column-gap: 12px;
+
+    &::before {
+      opacity: 0;
+      content: '';
+      position: absolute;
+      right: -10px;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      background: linear-gradient(90deg, #161617 22%, rgba(17, 69, 61, 0.71) 59.5%, rgba(8, 153, 129, 0.2) 100%);
+      z-index: -1;
+      transition: opacity 0.2s linear;
+    }
   }
 
   // .nav__link-icon
@@ -78,6 +84,11 @@
     min-width: 40px;
     border-radius: 8px;
     background-color: transparent;
+    transition: background-color 0.2s linear;
+
+    img {
+      transition: filter 0s linear;
+    }
   }
 
   // .nav__link-text
@@ -116,7 +127,7 @@
     background-image: url('../img/reck/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 8px;
+    border-radius: 14px;
 
     @media (max-width: 389px) {
       padding: 0 16px;
