--- a/src/scss/_start.scss
+++ b/src/scss/_start.scss
@@ -1,11 +1,31 @@
 .start {
   padding: 70px 20px;
-  background-image: image-set(url("../img/start/bg.webp") 1x type("image/webp"), url("../img/start/bg.png") 1x, url("../img/start/bg@2x.webp") 2x type("image/webp"), url("../img/start/bg@2x.png") 2x);
-  background-image: -webkit-image-set(url("../img/start/bg.webp") 1x type("image/webp"), url("../img/start/bg.png") 1x, url("../img/start/bg@2x.webp") 2x type("image/webp"), url("../img/start/bg@2x.png") 2x);
-  background-repeat: no-repeat;
-  background-size: cover;
+  // background-image: image-set(url("../img/start/bg.webp") 1x type("image/webp"), url("../img/start/bg.png") 1x, url("../img/start/bg@2x.webp") 2x type("image/webp"), url("../img/start/bg@2x.png") 2x);
+  // background-image: -webkit-image-set(url("../img/start/bg.webp") 1x type("image/webp"), url("../img/start/bg.png") 1x, url("../img/start/bg@2x.webp") 2x type("image/webp"), url("../img/start/bg@2x.png") 2x);
+  // background-repeat: no-repeat;
+  // background-size: cover;
+
+
+  // @media (min-width: $breakpoint992) {
+  //   background-image: image-set(url("../img/start/bg-desktop.webp") 1x type("image/webp"), url("../img/start/bg-desktop.png") 1x, url("../img/start/bg-desktop@2x.webp") 2x type("image/webp"), url("../img/start/bg-desktop@2x.png") 2x);
+  //   background-image: -webkit-image-set(url("../img/start/bg-desktop.webp") 1x type("image/webp"), url("../img/start/bg-desktop.png") 1x, url("../img/start/bg-desktop@2x.webp") 2x type("image/webp"), url("../img/start/bg-desktop@2x.png") 2x);
+  // }
 
   // .start__inner
+
+
+  .log__img {
+    @media (min-width: $breakpoint992) {
+      width: 284px;
+    }
+  }
+
+  .btn {
+    @media (min-width: $breakpoint992) {
+      max-width: 354px;
+      margin: 0 auto;
+    }
+  }
 
   &__inner {}
 
@@ -18,6 +38,11 @@
     row-gap: 30px;
     min-height: calc(100dvh - 140px);
     height: 100%;
+
+    @media (min-width: $breakpoint992) {
+      justify-content: center;
+      row-gap: 60px;
+    }
   }
 
   // .start__row
@@ -25,6 +50,10 @@
   &__row {
     .logo {
       margin-bottom: 30px;
+
+      @media (min-width: $breakpoint992) {
+        margin-bottom: 60px;
+      }
     }
   }
 
@@ -34,6 +63,10 @@
     display: flex;
     flex-direction: column;
     row-gap: 16px;
+
+    @media (min-width: $breakpoint992) {
+      row-gap: 20px;
+    }
   }
 
   // .start__title
@@ -43,6 +76,10 @@
     font-size: 24px;
     text-align: center;
     color: var(--text-1);
+
+    @media (min-width: $breakpoint992) {
+      font-size: 40px;
+    }
   }
 
   // .start__subtitle
@@ -53,5 +90,9 @@
     line-height: 140%;
     text-align: center;
     color: var(--text-1);
+
+    @media (min-width: $breakpoint992) {
+      font-size: 20px;
+    }
   }
 }
