--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 
 // Sections or Pages SCSS-files imports
 @import './header';
+@import './aside';
 @import './logo';
 @import './start';
 @import './main';
@@ -31,6 +32,7 @@
 @import './slider';
 @import './tabs';
 @import './footer';
+@import './mobile-bases';
 
 // Libs
 // @import './libs/swiper';
