--- a/src/scss/_filters-head.scss
+++ b/src/scss/_filters-head.scss
@@ -78,7 +78,7 @@
     align-items: center;
     column-gap: 6px;
     margin-left: auto;
-    width: 100%;
+    // width: 100%;
   }
 
   // .filters-head__action
