--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -5,7 +5,7 @@
   margin: 0 auto;
   padding: 0 $containerSidePadding + px;
 
-  @media (max-width: $breakpoint1450) {}
+  @media (min-width: $breakpoint1450) {}
 
   @media (min-width: $breakpoint992) {}
 
