--- a/src/scss/_terminal.scss
+++ b/src/scss/_terminal.scss
@@ -1,5 +1,78 @@
 .terminal {
 
+  .tab__content.desktop-dn {
+    display: block;
+
+    @media (min-width: $breakpoint992) {
+      display: none;
+    }
+  }
+
+  @media (min-width: 1540px) {
+    width: calc(100% - 394px);
+  }
+
+  @media (min-width: $breakpoint992) {
+    display: flex;
+    flex-direction: column;
+    align-content: baseline;
+    width: calc(100% - 320px);
+    margin-bottom: -20px;
+    // padding-left: 20px;
+
+    .table-wrapper {
+      border-radius: 0;
+    }
+
+    .table th:first-child,
+    .table td:first-child {
+      padding-left: 0;
+    }
+
+    .tab__btns {
+      width: fit-content;
+      border-right: 1px solid #212121;
+      border-left: 1px solid #212121;
+    }
+
+    .tab__btn {
+      padding: 8px 18px;
+    }
+
+    .tab__head {
+      padding: 10px 0 10px 20px;
+      margin: 0;
+    }
+
+    .table-wrapper {
+      min-height: 100%;
+      border-bottom: 0;
+    }
+
+    .table th:first-child,
+    .table td:first-child {
+      border-right: 0;
+    }
+
+    .table th:last-child {
+      text-align: right;
+    }
+
+    .tab__contents {}
+
+    .tab__content {
+      &>.table-wrapper {
+        padding: 20px;
+        border-left: 0;
+        border-right: 0;
+      }
+    }
+
+    .tab__content--desktop-dn {
+      display: none;
+    }
+  }
+
   // .terminal__blocks
 
   &__blocks {
@@ -8,6 +81,10 @@
     justify-content: space-between;
     column-gap: 10px;
     margin: 12px 0;
+
+    &--desktop {
+      width: 100%;
+    }
   }
 
   // .terminal__block
@@ -39,6 +116,13 @@
     width: 100%;
     height: 294px;
     margin: 12px 0;
+
+    @media (min-width: $breakpoint992) {
+      height: 394px;
+      margin: 0;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
   }
 
   // .terminal__graphik-img
@@ -60,6 +144,12 @@
       flex-direction: column;
       row-gap: 12px;
     }
+
+    @media (min-width: $breakpoint992) {
+      .subtabs {
+        width: 100%;
+      }
+    }
   }
 
   // .terminal__form-rows
@@ -68,6 +158,10 @@
     display: flex;
     flex-direction: column;
     row-gap: 6px;
+
+    @media (min-width: $breakpoint992) {
+      row-gap: 12px;
+    }
   }
 
   // .terminal__form-select
@@ -105,6 +199,43 @@
       pointer-events: none;
       opacity: 0.4;
     }
+
+    &:has(.terminal__form-row) {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      column-gap: 6px;
+      row-gap: 6px;
+      padding: 0;
+      background-color: #161617;
+
+      .terminal__form-row {
+        border-radius: 4px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+
+        &.active {
+          background-color: var(--green-2);
+          color: var(--text-1);
+
+          .terminal__form-text {
+            color: var(--text-1);
+          }
+        }
+
+        @media (hover:hover) {
+          &:hover {
+            background-color: var(--green-2);
+            color: var(--text-1);
+
+            .terminal__form-text {
+              color: var(--text-1);
+            }
+          }
+        }
+      }
+    }
   }
 
   // .terminal__form-text
@@ -116,7 +247,97 @@
 
   // .terminal__form-text--white
 
-  &__form-text--white {}
+  &__form-text--white {
+    color: var(--text-1);
+  }
 
-  color: var(--text-1);
+
+}
+
+.terminal__form--desktop {
+  @media (min-width: 1540px) {
+    width: 394px;
+  }
+
+  @media (min-width: $breakpoint992) {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    display: flex;
+    flex-direction: column;
+    row-gap: 32px;
+    height: 100%;
+    width: 320px;
+    margin: 0;
+    margin-top: 0;
+    padding: 24px 20px;
+    border-top: 1px solid #212121;
+    border-left: 1px solid #212121;
+
+    .subtabs__head {
+      padding: 0;
+      background-color: transparent;
+      border: 1px solid #212121;
+    }
+
+    .subtabs__btn {
+      height: 40px;
+    }
+
+    // .terminal__form-order-settings
+
+    .terminal__form-order-settings {}
+
+    // .terminal__form-settings
+
+    .terminal__form-settings {
+      // display: flex;
+      align-items: center;
+      column-gap: 4px;
+      justify-content: flex-end;
+      margin-left: auto;
+      font-weight: 400;
+      font-size: 12px;
+      text-decoration: underline;
+      text-decoration-skip-ink: none;
+      color: #9295a5;
+
+      img {
+        filter: brightness(0) saturate(100%) invert(40%) sepia(34%) saturate(2362%) hue-rotate(138deg) brightness(96%) contrast(94%);
+      }
+
+      @media (hover:hover) {
+        &:hover {
+          color: var(--green-2);
+        }
+      }
+    }
+  }
+}
+
+.terminal__graphik--desktop {}
+
+.filters-head--terminal {
+  @media (min-width: $breakpoint992) {
+    width: calc(100% - 320px);
+    // border-right: 1px solid #212121;
+    // border-left: 1px solid #212121;
+
+    .filters-head__row {
+      flex-wrap: wrap;
+      row-gap: 20px;
+      column-gap: 40px;
+    }
+  }
+
+  @media (min-width: 1540px) {
+    width: calc(100% - 394px);
+
+    .filters-head__row {
+      flex-wrap: nowrap;
+      row-gap: 20px;
+      column-gap: 60px;
+    }
+  }
 }
