added desktop view sniper page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,6 +29,7 @@
 @import './settings';
 @import './twofactor';
 @import './terminal';
+@import './sniper';
 @import './slider';
 @import './tabs';
 @import './footer';
