--- a/src/scss/_tabs.scss
+++ b/src/scss/_tabs.scss
@@ -102,6 +102,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    column-gap: 12px;
     width: 100%;
   }
 
