added final pages

--- a/src/scss/_advanced.scss
+++ b/src/scss/_advanced.scss
@@ -151,6 +151,7 @@
     font-family: var(--font-family);
     font-weight: 400;
     font-size: 14px;
-    color: var(--text2);
+    color: var(--text-1);
+    cursor: pointer;
   }
 }
