--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,6 +30,7 @@
 @import './twofactor';
 @import './terminal';
 @import './sniper';
+@import './portfolio-analyzer';
 @import './slider';
 @import './tabs';
 @import './footer';
