--- a/src/scss/_support.scss
+++ b/src/scss/_support.scss
@@ -1,4 +1,7 @@
 .support {
+  @media (min-width: $breakpoint992) {
+    padding: 20px;
+  }
 
   // .support__inner
 
@@ -57,10 +60,19 @@
     font-size: 14px;
     text-align: center;
     color: var(--text-1);
+    transition: 0.2s linear;
+
+    @media (hover:hover) {
+      &:hover {
+        border-color: var(--green-2);
+        color: var(--green-2);
+      }
+    }
 
     &:active,
     &:focus {
       border-color: var(--green-2);
+      color: var(--green-2);
     }
   }
 }
