--- a/src/scss/_wallet-manager.scss
+++ b/src/scss/_wallet-manager.scss
@@ -146,6 +146,18 @@
     text-transform: uppercase;
     text-align: center;
     color: #ffc225;
+
+    img {
+      transition: transform 0.2s linear;
+    }
+
+    @media (hover:hover) {
+      &:hover {
+        img {
+          transform: translateY(3px);
+        }
+      }
+    }
   }
 
   // .wallet-manager__item-name
@@ -165,5 +177,255 @@
     font-weight: 400;
     font-size: 14px;
     color: var(--text2);
+  }
+
+
+
+
+
+
+  @media (min-width: $breakpoint992) {
+    position: relative;
+    border-top: 1px solid #212121;
+
+    .table-wrapper {
+      border: 0;
+      min-height: fit-content;
+    }
+
+    .table thead {
+      border: 0;
+    }
+
+    .table th:first-child,
+    .table td:first-child {
+      padding-left: 0;
+      border-right: 0;
+    }
+
+    .table th:last-child {
+      padding-right: 10px;
+      text-align: right;
+    }
+
+    .outline-btn {
+      padding: 10px 16px;
+    }
+
+    .tab__head {
+      display: none;
+    }
+
+    .tab__chain {
+      margin: 24px 0;
+    }
+
+    .tab__contents {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      width: calc(100% - 320px);
+    }
+
+    .tab__content {
+      padding: 20px;
+      display: block;
+
+      &:last-child {
+        border-top: 1px solid #212121;
+        grid-column: span 1;
+      }
+    }
+
+    .tab__token {
+      width: fit-content;
+    }
+
+    .tab__content--absulate {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 320px;
+      height: 100%;
+      border-left: 1px solid #212121;
+    }
+
+    .tab__graphik {
+      column-gap: 10px;
+    }
+
+    .tab__chain-content {
+      flex-wrap: wrap;
+      row-gap: 12px;
+    }
+
+    .tab__chain-list {
+      width: 100%;
+    }
+  }
+
+  @media (min-width: $breakpoint1450) {
+    .tab__contents {
+      width: calc(100% - 394px);
+    }
+
+    .tab__chain-list {
+      width: fit-content;
+    }
+
+    .tab__content--absulate {
+      width: 394px;
+    }
+
+    .tab__contents {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    .tab__content {
+      &:nth-child(2) {
+        border-right: 1px solid #212121;
+      }
+
+      &:last-child {
+        grid-column: span 2;
+      }
+    }
+
+    .tab__graphik {
+      column-gap: 20px;
+      margin-left: auto;
+    }
+
+    .tab__token {
+      width: 100%;
+    }
+  }
+}
+
+.wallet-manager-wrapper {}
+
+.wallet-actions {
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
+  margin-top: 30px;
+  // .wallet-actions__head
+
+  &__head {
+    display: flex;
+    flex-direction: column;
+    row-gap: 18px;
+    align-items: center;
+  }
+
+  // .wallet-actions__row
+
+  &__row {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    justify-content: center;
+  }
+
+  // .wallet-actions__label
+
+  &__label {
+    font-weight: 500;
+    font-size: 20px;
+    color: var(--text-1);
+
+  }
+
+  // .wallet-actions__sum-large
+
+  &__sum-large {
+    font-weight: 500;
+    font-size: 32px;
+    text-align: center;
+    color: var(--text-1);
+
+    &~span {
+      margin-top: -8px;
+      font-weight: 400;
+    }
+  }
+
+  // .wallet-actions__sum-small
+
+  &__sum-small {
+    font-weight: 500;
+    font-size: 18px;
+    text-align: center;
+    color: var(--text-1);
+
+    &~span {
+      margin-top: -8px;
+      font-size: 14px;
+      font-weight: 400;
+    }
+  }
+
+  // .wallet-actions__list
+
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    justify-items: center;
+    column-gap: 32px;
+    row-gap: 32px;
+
+    @media (min-width: $breakpoint1450) {
+      grid-template-columns: repeat(4, 1fr);
+    }
+  }
+
+  // .wallet-actions__item
+
+  &__item {}
+
+  // .wallet-actions__btn
+
+  &__btn {
+    display: flex;
+    flex-direction: column;
+    row-gap: 12px;
+    align-items: center;
+    border: 0;
+    outline: 0;
+    background-color: transparent;
+
+    @media (hover:hover) {
+      &:hover {
+        .wallet-actions__btn-picture {
+          background-color: var(--green-2);
+        }
+
+        .wallet-actions__btn-text {
+          color: var(--green-2);
+        }
+      }
+    }
+  }
+
+  // .wallet-actions__btn-picture
+
+  &__btn-picture {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    min-width: 60px;
+    border-radius: 4px;
+    background-color: var(--green-2);
+  }
+
+  // .wallet-actions__btn-text
+
+  &__btn-text {
+    font-weight: 700;
+    font-size: 12px;
+    text-align: center;
+    color: var(--text-1);
   }
 }
