--- a/src/scss/_aside.scss
+++ b/src/scss/_aside.scss
@@ -4,6 +4,15 @@
   display: none;
   transition: 0.1s linear;
 
+  .filters-head__action-btn {
+    height: 36px;
+    min-height: 36px;
+  }
+
+  .filters-head__action-btn {
+    max-width: 100%;
+  }
+
   @media (min-width: $breakpoint992) {
     display: block;
   }
@@ -107,7 +116,7 @@
     }
 
     .nav__link {
-      padding: 0 20px;
+      padding: 0 20px 0 0;
     }
 
     .nav__item.active .nav__link::before {
@@ -128,7 +137,7 @@
     align-items: center;
     justify-content: space-between;
     column-gap: 10px;
-    padding: 0 4px 0 18px;
+    padding: 46px 16px;
     margin-top: auto;
     background-color: #272728;
     background-image: url('../img/reck/bg.png');
@@ -157,7 +166,6 @@
   &__banner-picture {
     display: flex;
     align-items: center;
-    height: 54px;
   }
 
   .filters-head__actions {
@@ -178,7 +186,8 @@
     justify-content: space-between;
     column-gap: 20px;
     width: 100%;
-    padding: 12px 16px;
+    height: 36px;
+    padding: 9px 16px;
     border-radius: 8px;
     background-color: #272728;
   }
