--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -31,7 +31,7 @@
     column-gap: 20px;
 
     @media (max-width: 389px) {
-      column-gap: 16px;
+      column-gap: 14px;
     }
   }
 
@@ -41,46 +41,10 @@
     position: relative;
     z-index: 1;
 
-    &::before {
-      content: '';
-      position: absolute;
-      bottom: -24px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 8px;
-      height: 8px;
-      border-radius: 100%;
-      background-color: var(--green-2);
-      user-select: none;
-      pointer-events: none;
-      z-index: -1;
-      opacity: 0;
-      transition: opacity 0.2s linear;
-    }
-
-    &::after {
-      content: '';
-      position: absolute;
-      bottom: -24px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 32px;
-      height: 32px;
-      border-radius: 100%;
-      background-color: var(--green-2);
-      filter: blur(25px);
-      user-select: none;
-      pointer-events: none;
-      z-index: -1;
-      opacity: 0;
-      transition: opacity 0.2s linear;
-    }
-
     &.active {
 
-      &::before,
-      &::after {
-        opacity: 1;
+      .footer__link {
+        background-image: url("../img/footer/bg-active.svg");
       }
 
       .footer__link-text {
@@ -100,7 +64,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     row-gap: 2px;
+    padding: 2px;
+    min-width: 54px;
+    min-height: 44px;
+    width: fit-content;
+    height: fit-content;
+    background-image: url("../img/footer/bg.svg");
+    background-size: cover;
   }
 
   // .footer__link-img
@@ -113,6 +85,7 @@
     font-family: var(--third-family);
     font-weight: 400;
     font-size: 11px;
+    line-height: 100%;
     text-align: center;
     color: var(--text2);
   }
