--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -24,7 +24,9 @@
 
   // .nav__list
 
-  &__list {}
+  &__list {
+    margin-left: 20px;
+  }
 
   // .nav__item
 
@@ -33,10 +35,6 @@
     &.active {
       .nav__link-icon {
         background-color: var(--green-2);
-
-        img {
-          filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(6786%) hue-rotate(343deg) brightness(120%) contrast(101%);
-        }
       }
 
       .nav__link {
@@ -63,11 +61,12 @@
       opacity: 0;
       content: '';
       position: absolute;
-      right: -10px;
+      right: 0;
       top: 0;
       left: 0;
       bottom: 0;
-      background: linear-gradient(90deg, #161617 22%, rgba(17, 69, 61, 0.71) 59.5%, rgba(8, 153, 129, 0.2) 100%);
+      background-image: url('../img/nav-link-bg.png');
+      background-size: cover;
       z-index: -1;
       transition: opacity 0.2s linear;
     }
