--- a/src/scss/_portfolio-analyzer.scss
+++ b/src/scss/_portfolio-analyzer.scss
@@ -85,29 +85,22 @@
 
     .tab__content--absulate {
       width: 394px;
+      height: auto;
     }
 
     .tab__contents {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(1, 1fr);
     }
 
     .tab__content {
       &:nth-child(2) {
         border-right: 1px solid #212121;
       }
-
-      &:last-child {
-        grid-column: span 2;
-      }
     }
 
     .tab__graphik {
       column-gap: 20px;
       margin-left: auto;
-    }
-
-    .tab__token {
-      width: 100%;
     }
   }
 }
