--- a/src/scss/_pump-vision.scss
+++ b/src/scss/_pump-vision.scss
@@ -59,7 +59,11 @@
   .table-wrapper {
     border: 1px solid #212121;
     border-radius: 4px;
-    min-height: calc(100dvh - 200px);
+
+
+    @media (min-width: $breakpoint992) {
+      min-height: calc(100dvh - 200px);
+    }
 
     &.table-wrapper--fit-height {
       height: auto;
