--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -150,6 +150,10 @@
     line-height: 100%;
     text-transform: uppercase;
     color: var(--text-1);
+
+    &--little {
+      text-transform: none;
+    }
   }
 
   // .nav__banner-link
