--- a/src/scss/_advanced.scss
+++ b/src/scss/_advanced.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 24px;
-    min-height: 100dvh;
+    min-height: 100%;
   }
 
   // .advanced__head
