--- a/src/scss/_portfolio-analyzer.scss
+++ b/src/scss/_portfolio-analyzer.scss
@@ -1,4 +1,9 @@
 .portfolio-analyzer {
+  .tab__token {
+    width: 100%;
+    justify-content: space-between;
+  }
+
   @media (min-width: $breakpoint992) {
     position: relative;
     border-top: 1px solid #212121;
@@ -47,10 +52,6 @@
       }
     }
 
-    .tab__token {
-      width: fit-content;
-    }
-
     .tab__content--absulate {
       position: absolute;
       top: 0;
@@ -61,6 +62,7 @@
     }
 
     .tab__graphik {
+      flex-direction: row;
       column-gap: 10px;
     }
 
@@ -101,6 +103,24 @@
     .tab__graphik {
       column-gap: 20px;
       margin-left: auto;
+    }
+  }
+
+
+  .tab__two-columns {
+    .tab__content:nth-child(1) {
+      border-right: 0;
+      border-bottom: 1px solid #212121;
+
+      @media (min-width: $breakpoint1450) {
+        border-bottom: 0;
+        border-right: 1px solid #212121;
+      }
+    }
+
+    .tab__content:nth-child(2) {
+      border-right: 0;
+      border-top: 0;
     }
   }
 }
